--- a/index.html
+++ b/index.html
@@ -1,12 +1,73 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AutoDoc Genius</title>
+    <style>
+      #loading-screen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #f5f7fa;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+        transition: opacity 0.3s ease;
+      }
+      #loading-screen.hidden {
+        opacity: 0;
+        pointer-events: none;
+      }
+      .loading-container {
+        text-align: center;
+      }
+      .loading-title {
+        font-size: 28px;
+        font-weight: 600;
+        color: #333;
+        margin-bottom: 30px;
+      }
+      .loading-bar {
+        width: 200px;
+        height: 4px;
+        background-color: #e4e7ed;
+        border-radius: 2px;
+        overflow: hidden;
+        margin: 0 auto;
+      }
+      .loading-bar-fill {
+        width: 40%;
+        height: 100%;
+        background-color: #409eff;
+        animation: loading 1.5s ease-in-out infinite;
+      }
+      @keyframes loading {
+        0% { transform: translateX(-100%); }
+        100% { transform: translateX(250%); }
+      }
+      .loading-text {
+        margin-top: 20px;
+        font-size: 14px;
+        color: #909399;
+      }
+    </style>
   </head>
   <body>
+    <div id="loading-screen">
+      <div class="loading-container">
+        <div class="loading-title">Excel转报告批量生成器</div>
+        <div class="loading-bar">
+          <div class="loading-bar-fill"></div>
+        </div>
+        <div class="loading-text">正在加载...</div>
+      </div>
+    </div>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
